add some user endpoints
