# backend/docs/swagger.yaml
@@ -206,6 +206,22 @@ definitions:
     required:
     - name
     type: object
+  models.UpdateUserDto:
+    properties:
+      email:
+        example: email@gmail.com
+        type: string
+      password:
+        example: VeryStrongPassword
+        maxLength: 255
+        minLength: 8
+        type: string
+      username:
+        example: AurisTFG
+        maxLength: 100
+        minLength: 3
+        type: string
+    type: object
   models.UserDto:
     properties:
       email:
@@ -290,6 +306,18 @@ definitions:
       error:
         example: Validation error
         type: string
+    type: object
+  responses.UserResponse:
+    properties:
+      user:
+        $ref: '#/definitions/models.UserDto'
+    type: object
+  responses.UsersResponse:
+    properties:
+      users:
+        items:
+          $ref: '#/definitions/models.UserDto'
+        type: array
     type: object
 externalDocs:
   description: OpenAPI
@@ -865,4 +893,66 @@ paths:
       summary: Update a result
       tags:
       - results
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: Get all users
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.UsersResponse'
+      summary: Get all users
+      tags:
+      - users
+  /users/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get user by ID
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.UserResponse'
+      summary: Get user by ID
+      tags:
+      - users
+    patch:
+      consumes:
+      - application/json
+      description: Update user
+      parameters:
+      - description: User ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: User
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/models.UpdateUserDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/responses.UserResponse'
+      summary: Update user
+      tags:
+      - users
 swagger: "2.0"
