# backend/routes/routes.go
@@ -13,11 +13,7 @@ import (
 
 func ApplyRoutes(
 	server *gin.Engine,
-	authMiddleware middlewares.AuthMiddleware,
-	authController controllers.AuthController,
-	seasonController controllers.SeasonController,
-	teamController controllers.TeamController,
-	resultController controllers.ResultController,
+	c *Controllers,
 ) {
 	server.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
@@ -25,37 +21,71 @@ func ApplyRoutes(
 	{
 		auth := v1.Group("/auth")
 		{
-			auth.POST("/signup", authController.AuthSignUp)
-			auth.POST("/login", authController.AuthLogIn)
-			auth.POST("/logout", authController.AuthLogOut)
-			auth.POST("/refresh-token", authController.AuthRefreshToken)
+			auth.POST("/signup", c.AuthController.AuthSignUp)
+			auth.POST("/login", c.AuthController.AuthLogIn)
+			auth.POST("/logout", c.AuthController.AuthLogOut)
+			auth.POST("/refresh-token", c.AuthController.AuthRefreshToken)
+		}
+
+		users := v1.Group("/users")
+		{
+			users.GET("/", c.UserController.GetAllUsers)
+			users.GET("/:userId", c.UserController.GetUserByID)
+			users.PATCH("/:userId", c.AuthMiddleware.RequireAuth, c.UserController.UpdateUser)
 		}
 
 		seasons := v1.Group("/seasons")
 		{
-			seasons.GET("/", seasonController.GetAllSeasons)
-			seasons.GET("/:seasonId", seasonController.GetSeason)
-			seasons.POST("/", authMiddleware.RequireAuth, seasonController.CreateSeason)
-			seasons.PATCH("/:seasonId", authMiddleware.RequireAuth, seasonController.UpdateSeason)
-			seasons.DELETE("/:seasonId", authMiddleware.RequireAuth, seasonController.DeleteSeason)
+			seasons.GET("/", c.SeasonController.GetAllSeasons)
+			seasons.GET("/:seasonId", c.SeasonController.GetSeason)
+			seasons.POST("/", c.AuthMiddleware.RequireAuth, c.SeasonController.CreateSeason)
+			seasons.PATCH("/:seasonId", c.AuthMiddleware.RequireAuth, c.SeasonController.UpdateSeason)
+			seasons.DELETE("/:seasonId", c.AuthMiddleware.RequireAuth, c.SeasonController.DeleteSeason)
 
 			teams := seasons.Group("/:seasonId/teams")
 			{
-				teams.GET("/", teamController.GetAllTeams)
-				teams.GET("/:teamId", teamController.GetTeam)
-				teams.POST("/", authMiddleware.RequireAuth, teamController.CreateTeam)
-				teams.PATCH("/:teamId", authMiddleware.RequireAuth, teamController.UpdateTeam)
-				teams.DELETE("/:teamId", authMiddleware.RequireAuth, teamController.DeleteTeam)
+				teams.GET("/", c.TeamController.GetAllTeams)
+				teams.GET("/:teamId", c.TeamController.GetTeam)
+				teams.POST("/", c.AuthMiddleware.RequireAuth, c.TeamController.CreateTeam)
+				teams.PATCH("/:teamId", c.AuthMiddleware.RequireAuth, c.TeamController.UpdateTeam)
+				teams.DELETE("/:teamId", c.AuthMiddleware.RequireAuth, c.TeamController.DeleteTeam)
 
 				results := teams.Group("/:teamId/results")
 				{
-					results.GET("/", resultController.GetAllResults)
-					results.GET("/:resultId", resultController.GetResult)
-					results.POST("/", authMiddleware.RequireAuth, resultController.CreateResult)
-					results.PATCH("/:resultId", authMiddleware.RequireAuth, resultController.UpdateResult)
-					results.DELETE("/:resultId", authMiddleware.RequireAuth, resultController.DeleteResult)
+					results.GET("/", c.ResultController.GetAllResults)
+					results.GET("/:resultId", c.ResultController.GetResult)
+					results.POST("/", c.AuthMiddleware.RequireAuth, c.ResultController.CreateResult)
+					results.PATCH("/:resultId", c.AuthMiddleware.RequireAuth, c.ResultController.UpdateResult)
+					results.DELETE("/:resultId", c.AuthMiddleware.RequireAuth, c.ResultController.DeleteResult)
 				}
 			}
 		}
+	}
+}
+
+type Controllers struct {
+	AuthMiddleware   middlewares.AuthMiddleware
+	AuthController   controllers.AuthController
+	UserController   controllers.UserController
+	SeasonController controllers.SeasonController
+	TeamController   controllers.TeamController
+	ResultController controllers.ResultController
+}
+
+func NewControllers(
+	AuthMiddleware middlewares.AuthMiddleware,
+	AuthController controllers.AuthController,
+	userController controllers.UserController,
+	SeasonController controllers.SeasonController,
+	TeamController controllers.TeamController,
+	ResultController controllers.ResultController,
+) Controllers {
+	return Controllers{
+		AuthMiddleware:   AuthMiddleware,
+		AuthController:   AuthController,
+		UserController:   userController,
+		SeasonController: SeasonController,
+		TeamController:   TeamController,
+		ResultController: ResultController,
 	}
 }
